--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <section class = "section">
         <section id="workshops" class="workshops">
             <h2>Calendar</h2>
-            <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=America%2FNew_York&showPrint=0&title=Code%20Club&src=c2FwbmFwYXRlbDM4NjNAZ21haWwuY29t&src=OWI5NjZjOWE3OTMwYWQ2YjA0YmFmNTc5ZGYwMjFiZTg5OTdhMzIxMWQ2YThhYWRmNDc5MTRmMzRjYjNkMWQ0YUBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&src=YWRkcmVzc2Jvb2sjY29udGFjdHNAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&color=%23039BE5&color=%23E4C441&color=%2333B679" style="border:solid 1px #777" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+            <iframe src="https://calendar.google.com/calendar/embed?height=500&wkst=1&ctz=America%2FNew_York&showPrint=0&src=c2FwbmFwYXRlbDM4NjNAZ21haWwuY29t&src=OWI5NjZjOWE3OTMwYWQ2YjA0YmFmNTc5ZGYwMjFiZTg5OTdhMzIxMWQ2YThhYWRmNDc5MTRmMzRjYjNkMWQ0YUBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&src=YWRkcmVzc2Jvb2sjY29udGFjdHNAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&color=%23039BE5&color=%23E4C441&color=%2333B679" style="border:solid 1px #777" width="500" height="500" frameborder="0" scrolling="no"></iframe>
         </section>
         </section>
 
