--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <section id="hero">
             <div class="hero-content">
-                <h1>Welcome to Code Club</h1>
+                <h1>Code Club 🤖</h1>
                 <p>Empowering the next generation of tech innovators</p>
             </div>
         </section>
