--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
                 <img src="Electric Guitars.jpeg" alt="Students coding" class="gallery-image">
                  <img src="Image (1).jpg" alt="Students coding" class="gallery-image">
                  <img src="Image (2).jpg" alt="Students coding" class="gallery-image">
+                 <img src="12-20.jpeg" alt="Students coding" class="gallery-image">
+                 <img src="12-21.jpeg" alt="Students coding" class="gallery-image">
             </div>
         </section>
 
