--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
       <div class="volunteers-container">
         <div class="volunteer-group">
           <h3>Mainland Regional High School</h3>
-          <p>Dedicated student volunteers from MRHS help teach and mentor younger students in our coding workshops.</p>
+          <p>Students from MRHS in Linwood, New Jersey volunteer their time to help teach students.</p>
         </div>
         <div class="volunteer-group">
           <h3>Key Club</h3>
-          <p>Members of the Key Club contribute their time and expertise to support our mission of making coding accessible to all students.</p>
+          <p>Members of Key Club, a prominent volunteer organization, come to volunteer for Code Club.</p>
         </div>
       </div>
     </section>
@@ -82,22 +82,22 @@
       <p>At Code Club, we provide students with the latest tools to help them learn and create. Here are some of the resources we use in our workshops:</p>
       <div class="tools-container">
         <div class="tool">
-          <img src="https://images.unsplash.com/photo-1633118144173-63903db0b8b7?w=300" alt="Scratch Programming">
+          <img src="Lang/scratch.png" alt="Scratch Programming">
           <h3>Scratch</h3>
           <p>A beginner-friendly programming language where students can create interactive stories, games, and animations.</p>
         </div>
         <div class="tool">
-          <img src="https://images.unsplash.com/photo-1635945416566-6302b54c056b?w=300" alt="Microbit">
+          <img src="Lang/microbit.jpg" alt="Microbit">
           <h3>Microbits</h3>
           <p>A small, programmable computer used to teach students about electronics and coding through hands-on projects.</p>
         </div>
         <div class="tool">
-          <img src="https://images.unsplash.com/photo-1620712943543-bcc4688e7485?w=300" alt="Jimu Robot">
+          <img src="Lang/jimu2.jpg" alt="Jimu Robot">
           <h3>Jimu Robots</h3>
           <p>Robotics kits that allow students to build and program their own robots, encouraging problem-solving and engineering skills.</p>
         </div>
         <div class="tool">
-          <img src="https://images.unsplash.com/photo-1624378515195-6bbdb73dff1a?w=300" alt="MakeCode">
+          <img src="Lang/makecode.png" alt="MakeCode">
           <h3>Microsoft MakeCode</h3>
           <p>A block-based programming platform that makes it easy for students to get started with coding and create their own interactive projects.</p>
         </div>
@@ -107,7 +107,7 @@
           <p>A popular open-source electronics platform that enables students to build everything from simple circuits to complex robotic systems.</p>
         </div>
         <div class="tool">
-          <img src="https://images.unsplash.com/photo-1632882765546-1ee75f53becb?w=300" alt="JavaScript">
+          <img src="Lang/js.jpg" alt="JavaScript">
           <h3>JavaScript</h3>
           <p>One of the most widely used programming languages, essential for building websites and developing interactive content.</p>
         </div>
