--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Code Club - Otto Bruyns Public Library</title>
   <link rel="stylesheet" href="style.css"/>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&family=Montserrat:wght@700&display=swap" rel="stylesheet"/>
+  <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v22.0"></script>
 </head>
 <body>
   <header>
@@ -28,6 +29,15 @@
       </ul>
     </nav>
   </header>
+
+  <section id="quote" class="quote-section">
+    <div class="quote-container">
+        <blockquote>
+            "Everybody should learn to program a computer, because it teaches you how to think."
+        </blockquote>
+        <cite>- Steve Jobs</cite>
+    </div>
+  </section>
 
   <main>
     <section id="about" class="section">
@@ -170,6 +180,21 @@
         <div class="faq-answer" style="display: none;">
           <p>It’s completely free — thanks to library grants and community support.</p>
         </div>
+      </div>
+    </section>
+
+    <section id="articles" class="section">
+      <h2>Latest Articles</h2>
+      <div class="articles-grid">
+        <article class="article-card">
+            <h3>Mainland Living</h3>
+            <p class="article-date"> February 2025</p>
+            <p>Rockets, Robots, & Readiness to Share: Meet Sapna Patel by Christine D'Alessandro. Learn about Code Club's background and involvement at the Otto Bruyns Public Library.</p>
+           
+            <a href="https://www.facebook.com/MainlandLivingBVM/posts/pfbid02U1dB6vPixtH3dGWzyhhqufuMBkf25jUKujTBKSUndBnpEa7j71CgeSSEt3J21fq2l" data-width="350" data-show-text="true"><blockquote cite="https://www.facebook.com/MainlandLivingBVM/posts/1025566442963771" class="read-more">Read More →</a>
+           <div id="fb-root"></div>
+        </article>
+    
       </div>
     </section>
 
