--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
 
   <section id="quote" class="quote-section">
     <div class="quote-container">
+      <script type="module" src="https://unpkg.com/@splinetool/viewer@1.9.95/build/spline-viewer.js"></script>
+<spline-viewer url="https://prod.spline.design/110GXNF7ZERg8-Rz/scene.splinecode"></spline-viewer>
         <blockquote>
             "Everybody should learn to program a computer, because it teaches you how to think."
         </blockquote>
