--- a/index.html
+++ b/index.html
@@ -20,26 +20,36 @@
     </section>
     <nav>
       <ul>
+        <li><a href="#start">Start</a></li>
         <li><a href="#about">About</a></li>
-        <li><a href="#workshops">Workshops</a></li>
         <li><a href="#gallery">Gallery</a></li>
-        <li><a href="#library">Library Info</a></li>
+        <li><a href="#library">Library Workshops</a></li>
         <li><a href="#faqs">FAQs</a></li>
         <li><a href="#instagram">Instagram</a></li>
       </ul>
     </nav>
   </header>
-
   <section id="quote" class="quote-section">
     <div class="quote-container">
       <script type="module" src="https://unpkg.com/@splinetool/viewer@1.9.95/build/spline-viewer.js"></script>
 <spline-viewer url="https://prod.spline.design/110GXNF7ZERg8-Rz/scene.splinecode"></spline-viewer>
-        <blockquote>
-            "Everybody should learn to program a computer, because it teaches you how to think."
-        </blockquote>
-        <cite>- Steve Jobs</cite>
+      <blockquote>Scroll down to learn more!</blockquote>
     </div>
   </section>
+
+    <section id="start" class="section">
+      <h2>Start Here</h2>
+      <div class="volunteers-container">
+        <div class="volunteer-group">
+          <h3> <a href="https://arcade.makecode.com/" target="_blank">Microsoft MakeCode</a></h3>
+          <p></p>
+        </div>
+        <div class="volunteer-group">
+         <h3> <a href="https://makecode.microbit.org/" target="_blank">Microsoft Micro:bit</a></h3>
+          <p></p>
+        </div>
+      </div>
+    </section>
 
   <main>
     <section id="about" class="section">
@@ -68,11 +78,6 @@
           </div>
         </div>
       </div>
-    </section>
-
-    <section id="workshops" class="section">
-      <h2>Workshops</h2>
-      <p>Our weekly workshops are interactive and engaging. We have workshops every Saturday at the Northfield library from 2:30 - 4:00 pm and upcoming dates at the Linwood Library. Scroll below to see photos of our work and call your local library for updates on upcoming sessions!</p>
     </section>
 
     <section id="volunteers" class="section">
@@ -141,19 +146,28 @@
     </section>
 
     <section id="library" class="section">
-      <h2>Participating Libraries</h2>
+      <h2>Library Workshops</h2>
       <div class="library-locations">
         <div class="library-item">
           <h3>Otto Bruyns Public Library</h3>
           <p><strong>Address:</strong> 241 W. Mill Rd, Northfield, NJ 08225</p>
           <p><strong>Phone:</strong> (609) 646-4476</p>
-          <p><strong>Website:</strong> <a href="https://www.nflibrary.org/" target="_blank">https://www.nflibrary.org/</a></p>
+          <p><strong>Dates:</strong> Saturdays 2:30 - 4:00 PM</p>
+          <p><strong>Website:</strong> <a href="https://www.nflibrary.org/" target="_blank">Otto Bruyns Public Library</a></p>
         </div>
         <div class="library-item">
           <h3>Linwood Library</h3>
           <p><strong>Address:</strong> 301 Davis Avenue, Linwood, NJ 08221</p>
           <p><strong>Phone:</strong> (609) 926-7991</p>
-          <p><strong>Website:</strong> <a href="https://linwoodlibrary.com/" target="_blank">https://linwoodlibrary.com/</a></p>
+          <p><strong>Dates:</strong> Wednesdays 3:30 - 4:30 PM</p>
+          <p><strong>Website:</strong> <a href="https://linwoodlibrary.com/" target="_blank">Linwood Library</a></p>
+        </div>
+        <div class="library-item">
+          <h3>Somers Point Library</h3>
+          <p><strong>Address:</strong> 801 Shore Rd, Somers Point, NJ 08244</p>
+          <p><strong>Phone:</strong> (609) 927-7113</p>
+          <p><strong>Dates:</strong> Saturdays starting in June</p>
+          <p><strong>Website:</strong> <a href="https://www.atlanticlibrary.org/somers_point_branch" target="_blank">Somers Point Library</a></p>
         </div>
         <div class="library-item coming-soon">
           <h3>More Atlantic County Libraries Coming Soon!</h3>
