--- a/index.html
+++ b/index.html
@@ -29,27 +29,49 @@
       </ul>
     </nav>
   </header>
+ 
   <section id="quote" class="quote-section">
     <div class="quote-container">
-      <script type="module" src="https://unpkg.com/@splinetool/viewer@1.9.95/build/spline-viewer.js"></script>
-<spline-viewer url="https://prod.spline.design/110GXNF7ZERg8-Rz/scene.splinecode"></spline-viewer>
-      <blockquote>Scroll down to learn more!</blockquote>
+        <script type="module" src="https://unpkg.com/@splinetool/viewer@1.9.95/build/spline-viewer.js"></script>
+        <spline-viewer url="https://prod.spline.design/110GXNF7ZERg8-Rz/scene.splinecode"></spline-viewer>
+        <blockquote>Scroll down to learn more!</blockquote>
+        <div class="scroll-arrow">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
     </div>
-  </section>
+</section>
 
-    <section id="start" class="section">
-      <h2>Start Here</h2>
-      <div class="volunteers-container">
-        <div class="volunteer-group">
-          <h3> <a href="https://arcade.makecode.com/" target="_blank">Microsoft MakeCode</a></h3>
-          <p></p>
+  <section id="start" class="section">
+    <h2>Start Here</h2>
+    <div class="workshop-banner">
+        <h3>At a Workshop Now?</h3>
+        <p>Welcome to Code Club! These are the platforms we use in our workshops. Click any of them to get started!</p>
+      <div>
+    <div class="resources-container">
+        <div class="resource-card">
+            <h3><a href="https://arcade.makecode.com/" target="_blank">Microsoft MakeCode Arcade</a></h3>
+            <img src="Lang/makecode.png" alt="MakeCode Arcade">
+            <p>Create your own retro arcade games using blocks or JavaScript. Perfect for beginners learning game development and basic programming concepts.</p>
         </div>
-        <div class="volunteer-group">
-         <h3> <a href="https://makecode.microbit.org/" target="_blank">Microsoft Micro:bit</a></h3>
-          <p></p>
+        <div class="resource-card">
+            <h3><a href="https://makecode.microbit.org/" target="_blank">Microsoft Micro:bit</a></h3>
+            <img src="Lang/microbit.jpg" alt="Micro:bit">
+            <p>Program the micro:bit microcontroller to create interactive projects. Learn about hardware programming and physical computing.</p>
         </div>
-      </div>
-    </section>
+        <div class="resource-card">
+            <h3><a href="https://scratch.mit.edu/" target="_blank">Scratch</a></h3>
+            <img src="Lang/scratch.png" alt="Scratch">
+            <p>A beginner-friendly visual programming language where you can create interactive stories, games, and animations using block-based coding.</p>
+        </div>
+        <div class="resource-card">
+            <h3><a href="https://code.org/" target="_blank">Code.org</a></h3>
+            <img src="https://code.org/images/logo.png" alt="Code.org">
+            <p>Learn computer science fundamentals through fun, interactive courses and hour of code activities suitable for all age groups.</p>
+        </div>
+    </div>
+</section>
 
   <main>
     <section id="about" class="section">
