--- a/gallery.html
+++ b/gallery.html
@@ -1,34 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <link rel="icon" type="image/x-icon" href="logo.png"/>
-  <title>Code Club - Otto Bruyns Public Library</title>
-  <link rel="stylesheet" href="style.css"/>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&family=Montserrat:wght@700&display=swap" rel="stylesheet"/>
-  <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v22.0"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="logo.png"/>
+    <title>About - Code Club</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&family=Montserrat:wght@700&display=swap" rel="stylesheet"/>
 </head>
 <body>
-  <header>
-    <section id="hero">
-      <div class="hero-content">
-        <img src="logo.png" alt="Code Club Logo" class="hero-logo">
+    <header class="compact-header">
+        <div class="spline-container">
+            <script type="module" src="https://unpkg.com/@splinetool/viewer@1.9.95/build/spline-viewer.js"></script>
+            <spline-viewer url="https://prod.spline.design/110GXNF7ZERg8-Rz/scene.splinecode"></spline-viewer>
+        </div>
         <h1>Code Club</h1>
-        <p>Empowering the next generation of tech innovators</p>
-      </div>
-    </section>
-    <nav>
-      <ul>
-          <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="workshops.html">Workshops</a></li>
-        <li><a href="gallery.html">Gallery</a></li>
-        <li><a href="contact.html">Contact</a></li>
-    </ul>
-      </ul>
-    </nav>
-  </header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="workshops.html">Workshops</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
     <section id="gallery" class="section">
       <h2>Gallery</h2>
       <div class="gallery-grid">
