--- a/contact.html
+++ b/contact.html
@@ -12,8 +12,7 @@
 <body>
     <header class="compact-header">
         <div class="spline-container">
-            <script type="module" src="https://unpkg.com/@splinetool/viewer@1.9.95/build/spline-viewer.js"></script>
-            <spline-viewer url="https://prod.spline.design/110GXNF7ZERg8-Rz/scene.splinecode"></spline-viewer>
+         <img src="logo.png" alt="Code Club Logo" class="hero-logo">
         </div>
         <h1>Code Club</h1>
         <nav>
