--- a/about.html
+++ b/about.html
@@ -12,8 +12,7 @@
 <body>
     <header class="compact-header">
         <div class="spline-container">
-            <script type="module" src="https://unpkg.com/@splinetool/viewer@1.9.95/build/spline-viewer.js"></script>
-            <spline-viewer url="https://prod.spline.design/110GXNF7ZERg8-Rz/scene.splinecode"></spline-viewer>
+          <img src="logo.png" alt="Code Club Logo" class="hero-logo">
         </div>
         <h1>Code Club</h1>
         <nav>
@@ -73,19 +72,19 @@
       <h2>Frequently Asked Questions</h2>
       <div class="faq-item">
         <h3>Who can join?</h3>
-        <div class="faq-answer" style="display: none;">
+        <div class="faq-answer">
           <p>All students from grades K–12 are welcome, regardless of experience level!</p>
         </div>
       </div>
       <div class="faq-item">
         <h3>Do I need my own laptop?</h3>
-        <div class="faq-answer" style="display: none;">
+        <div class="faq-answer">
           <p>If you can bring your own laptop it is appreciated. But if not, we have a limited number of desktops.</p>
         </div>
       </div>
       <div class="faq-item">
         <h3>How much does it cost?</h3>
-        <div class="faq-answer" style="display: none;">
+        <div class="faq-answer">
           <p>It’s completely free — thanks to library grants and community support.</p>
         </div>
       </div>
