--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
  
   <section id="quote" class="quote-section">
     <div class="quote-container">
-        <script type="module" src="https://unpkg.com/@splinetool/viewer@1.9.95/build/spline-viewer.js"></script>
-        <spline-viewer url="https://prod.spline.design/110GXNF7ZERg8-Rz/scene.splinecode"></spline-viewer>
+       <script type="module" src="https://unpkg.com/@splinetool/viewer@1.9.96/build/spline-viewer.js"></script>
+<spline-viewer loading-anim-type="spinner-small-light" url="https://prod.spline.design/110GXNF7ZERg8-Rz/scene.splinecode"></spline-viewer>
         <blockquote>Scroll start coding!</blockquote>
         <div class="scroll-arrow">
             <span></span>
