--- a/about.html
+++ b/about.html
@@ -25,6 +25,19 @@
             </ul>
         </nav>
     </header>
+
+<section id="promo" class="promo-section">
+    <div class="promo-container">
+        <h2>See What We're All About</h2>
+        <div class="video-wrapper">
+            <video controls>
+                <source src="Lang/Sapna's coding club promo.mov">
+                Your browser does not support the video tag.
+            </video>
+        </div>
+    </div>
+</section>
+
     <section id="about" class="section">
       <h2>About Code Club</h2>
       <div class="section-content">
