--- a/index.html
+++ b/index.html
@@ -30,9 +30,10 @@
     </nav>
   </header>
  
+
   <section id="quote" class="quote-section">
     <div class="quote-container">
-       <script type="module" src="https://unpkg.com/@splinetool/viewer@1.9.96/build/spline-viewer.js"></script>
+      <script type="module" src="https://unpkg.com/@splinetool/viewer@1.9.96/build/spline-viewer.js"></script>
 <spline-viewer loading-anim-type="spinner-small-light" url="https://prod.spline.design/110GXNF7ZERg8-Rz/scene.splinecode"></spline-viewer>
         <blockquote>Scroll start coding!</blockquote>
         <div class="scroll-arrow">
@@ -70,9 +71,57 @@
             <img src="https://code.org/images/logo.png" alt="Code.org">
             <p>Learn computer science fundamentals through fun, interactive courses and hour of code activities suitable for all age groups.</p>
         </div>
+        <div class="resource-card">
+            <h3><a href="https://kids.hatchxr.com/sample-projects" target="_blank">Hatch XR Kids</a></h3>
+            <img src="Lang/hatch.xr.jpeg" alt="Hatch XR Kids">
+            <p>Create immersive 3D worlds and games with easy-to-use tools. Perfect for learning spatial computing and creative design.</p>
+        </div>
+
+        <div class="resource-card">
+            <h3><a href="https://www.khanacademy.org/computing/intro-to-python-fundamentals" target="_blank">Khan Academy</a></h3>
+            <img src="Lang/khan.jpeg" alt="Khan Academy">
+            <p>Learn python through this beginner-friendly and free course. Great for those who are ready to take the next step from block coding.</p>
+        </div>
     </div>
 </section>
   </main>
+
+<section id="projects" class="section">
+    <h2>Featured Projects</h2>
+    <div class="projects-grid">
+        <article class="project-card">
+            <div class="project-image">
+                <img src="projects/arcade-game.png" alt="Space Shooter Game">
+            </div>
+            <div class="project-content">
+                <h3>Space Shooter</h3>
+                <p class="project-author">By Sarah, Age 12</p>
+                <p class="project-description">A retro-style space shooter game with multiple levels and power-ups.</p>
+                <div class="project-tags">
+                    <span class="tag">MakeCode</span>
+                    <span class="tag">Game Dev</span>
+                </div>
+                <a href="https://arcade.makecode.com/---run?id=_2phFpkKcwJe5" class="project-link" target="_blank">Play Game →</a>
+            </div>
+        </article>
+
+        <article class="project-card">
+            <div class="project-image">
+                <img src="projects/microbit-project.png" alt="LED Pattern Display">
+            </div>
+            <div class="project-content">
+                <h3>LED Pattern Display</h3>
+                <p class="project-author">By Marcus, Age 14</p>
+                <p class="project-description">Interactive LED display that responds to movement and sound.</p>
+                <div class="project-tags">
+                    <span class="tag">Micro:bit</span>
+                    <span class="tag">Hardware</span>
+                </div>
+                <a href="https://makecode.microbit.org/_MbrHEh6XyWqY" class="project-link" target="_blank">View Project →</a>
+            </div>
+        </article>
+    </div>
+</section>
 
   <footer>
     <div class="footer-content">
