--- a/workshops.html
+++ b/workshops.html
@@ -59,6 +59,17 @@
           <h3>JavaScript</h3>
           <p>One of the most widely used programming languages, essential for building websites and developing interactive content.</p>
         </div>
+          <div class="tool">
+        <img src="Lang/khan.jpeg" alt="Python Programming">
+        <h3>Python</h3>
+        <p>A versatile programming language perfect for beginners. Students learn text-based coding through fun projects like games and simple applications.</p>
+    </div>
+
+    <div class="tool">
+        <img src="https://code.org/images/logo.png" alt="Hour of Code">
+        <h3>Hour of Code</h3>
+        <p>Fun, interactive coding activities designed to introduce students to computer science through games and puzzles featuring popular characters.</p>
+    </div>
       </div>
     </section>
 
