--- a/workshops.html
+++ b/workshops.html
@@ -110,7 +110,8 @@
     <div class="footer-content">
       <p>&copy; 2024 Code Club - Sapna Patel</p>
       <div class="social-links">
-        <a href="https://facebook.com" class="social-link" target="_blank">Visit Our Facebook</a>
+        <a href="https://www.facebook.com/profile.php?id=61569116063972" class="social-link" target="_blank">Visit Our Facebook</a>
+         <a href="https://www.instagram.com/code_club_nj" class="social-link" target="_blank">Visit Our Instagram</a>
       </div>
     </div>
   </footer>
