--- a/index.html
+++ b/index.html
@@ -91,33 +91,32 @@
     <div class="projects-grid">
         <article class="project-card">
             <div class="project-image">
-                <img src="projects/arcade-game.png" alt="Space Shooter Game">
+                <img src="Lang//Balloons.jpeg" alt="Burstin' Balloons" />
             </div>
             <div class="project-content">
-                <h3>Space Shooter</h3>
-                <p class="project-author">By Sarah, Age 12</p>
-                <p class="project-description">A retro-style space shooter game with multiple levels and power-ups.</p>
+                <h3>Burstin' Balloons</h3>
+                <p class="project-author">By -----</p>
+                <p class="project-description">A retro-style, multiplayer clicker game to race to pop your balloon! Host a game by clicking at the top right corner! Press A to pop your balloon.</p>
                 <div class="project-tags">
                     <span class="tag">MakeCode</span>
                     <span class="tag">Game Dev</span>
                 </div>
-                <a href="https://arcade.makecode.com/---run?id=_2phFpkKcwJe5" class="project-link" target="_blank">Play Game →</a>
+                <a href="https://arcade.makecode.com/65526-15862-96778-52046" class="project-link" target="_blank">Play Game →</a>
             </div>
         </article>
 
         <article class="project-card">
             <div class="project-image">
-                <img src="projects/microbit-project.png" alt="LED Pattern Display">
             </div>
             <div class="project-content">
-                <h3>LED Pattern Display</h3>
-                <p class="project-author">By Marcus, Age 14</p>
-                <p class="project-description">Interactive LED display that responds to movement and sound.</p>
+                <h3>Coming Soon!</h3>
+                <p class="project-author">By ______</p>
+                <p class="project-description">----------------------------------</p>
                 <div class="project-tags">
                     <span class="tag">Micro:bit</span>
                     <span class="tag">Hardware</span>
                 </div>
-                <a href="https://makecode.microbit.org/_MbrHEh6XyWqY" class="project-link" target="_blank">View Project →</a>
+                <a href="" class="project-link" target="_blank">View Project →</a>
             </div>
         </article>
     </div>
