--- a/workshops.html
+++ b/workshops.html
@@ -95,8 +95,15 @@
           <h3>Somers Point Library</h3>
           <p><strong>Address:</strong> 801 Shore Rd, Somers Point, NJ 08244</p>
           <p><strong>Phone:</strong> (609) 927-7113</p>
-          <p><strong>Dates:</strong> Saturdays starting in June</p>
+          <p><strong>Dates:</strong> Thursdays 10:00 AM - 12:00 PM</p>
           <p><strong>Website:</strong> <a href="https://www.atlanticlibrary.org/somers_point_branch" target="_blank">Somers Point Library</a></p>
+        </div>
+        <div class="library-item">
+          <h3>Margate Eugene A Tighe Middle School</h3>
+          <p><strong>Address:</strong> 7804 Amherst Ave, Margate City, NJ 08402</p>
+          <p><strong>Phone (text only):</strong> (609) 432-3829</p>
+          <p><strong>Dates:</strong> Saturdays 10:30 - 11:30 AM</p>
+          <p><strong>Website:</strong> <a href="https://tighe.margateschools.org/" target="_blank">Somers Point Library</a></p>
         </div>
         <div class="library-item coming-soon">
           <h3>More Atlantic County Libraries Coming Soon!</h3>
