--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <link rel="icon" type="image/x-icon" href="logo.png"/>
-  <title>Code Club - Otto Bruyns Public Library</title>
+  <title>Code Club New Jersey</title>
   <link rel="stylesheet" href="style.css"/>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&family=Montserrat:wght@700&display=swap" rel="stylesheet"/>
   <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v22.0"></script>
@@ -14,7 +14,7 @@
     <section id="hero">
       <div class="hero-content">
         <img src="logo.png" alt="Code Club Logo" class="hero-logo">
-        <h1>Code Club</h1>
+        <h1>Code Club NJ</h1>
         <p>Empowering the next generation of tech innovators</p>
       </div>
     </section>
@@ -33,8 +33,7 @@
 
   <section id="quote" class="quote-section">
     <div class="quote-container">
-      <script type="module" src="https://unpkg.com/@splinetool/viewer@1.9.96/build/spline-viewer.js"></script>
-<spline-viewer loading-anim-type="spinner-small-light" url="https://prod.spline.design/110GXNF7ZERg8-Rz/scene.splinecode"></spline-viewer>
+      <blockquote>A student-led volunteer organization teaching K-12 attendees across New Jersey libraries</blockquote>
         <blockquote>Scroll start coding!</blockquote>
         <div class="scroll-arrow">
             <span></span>
@@ -95,7 +94,7 @@
             </div>
             <div class="project-content">
                 <h3>Burstin' Balloons</h3>
-                <p class="project-author">By -----</p>
+                <p class="project-author">By Shivani</p>
                 <p class="project-description">A retro-style, multiplayer clicker game to race to pop your balloon! Host a game by clicking at the top right corner! Press A to pop your balloon.</p>
                 <div class="project-tags">
                     <span class="tag">MakeCode</span>
@@ -107,16 +106,17 @@
 
         <article class="project-card">
             <div class="project-image">
+               <img src="Lang/Boba.jpeg" alt="Boba Page" />
             </div>
             <div class="project-content">
-                <h3>Coming Soon!</h3>
-                <p class="project-author">By ______</p>
-                <p class="project-description">----------------------------------</p>
+                <h3>Boba Page</h3>
+                <p class="project-author">By Asha</p>
+                <p class="project-description">Someone's first dynamically coded webpage using CSS and HTML.</p>
                 <div class="project-tags">
-                    <span class="tag">Micro:bit</span>
-                    <span class="tag">Hardware</span>
+                    <span class="tag">HTML, CSS, Javascript</span>
+                    <span class="tag">Web Dev</span>
                 </div>
-                <a href="" class="project-link" target="_blank">View Project →</a>
+                <a href="https://ashashaville.github.io/personal-website/" class="project-link" target="_blank">View Website →</a>
             </div>
         </article>
     </div>
