--- a/contact.html
+++ b/contact.html
@@ -30,25 +30,20 @@
         <section class="section contact-section">
             <h2>Contact Us</h2>
             <div class="contact-container">
-                <form id="contact-form" class="contact-form">
-                    <div class="form-group">
-                        <label for="name">Name:</label>
-                        <input type="text" id="name" name="name" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="email">Email:</label>
-                        <input type="email" id="email" name="email" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="subject">Subject:</label>
-                        <input type="text" id="subject" name="subject" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="message">Message:</label>
-                        <textarea id="message" name="message" rows="5" required></textarea>
-                    </div>
-                    <button type="submit" class="submit-btn">Send Message</button>
-                </form>
+                <p class="contact-info">
+                    Email us (Founder Sapna Patel) at: 
+                    <a href="mailto:sapnapatel3863@gmail.com">sapnapatel3863@gmail.com</a>
+                </p>
+                  <p class="contact-info">
+                    Call us (Founder Sapna Patel) at: 
+                    <a href="mailto:sapnapatel3863@gmail.com">(609) 224-4090</a>
+                </p>
+                 <p class="contact-info">
+                    Contact can be given to another member of the Code Club team if needed.
+                </p>
+                 <p class="contact-info">
+                    Check out the library websites on our workshop page. Look on our Instagram and Facebook for more information on event dates!
+                </p>
             </div>
         </section>
     </main>
