--- a/index.html
+++ b/index.html
@@ -43,6 +43,27 @@
     </div>
 </section>
 
+  <section id="stats" class="section stats-section">
+        <div class="stats-container">
+            <div class="stat-card">
+                <h3>4,000+</h3>
+                <p>Monthly Social Media Reach</p>
+            </div>
+            <div class="stat-card">
+                <h3>100+</h3>
+                <p>Students Taught</p>
+            </div>
+            <div class="stat-card">
+                <h3>20+</h3>
+                <p>Active Volunteers</p>
+            </div>
+            <div class="stat-card">
+                <h3>50+</h3>
+                <p>Workshops Held</p>
+            </div>
+        </div>
+    </section>
+
   <section id="start" class="section">
     <h2>Start Here</h2>
     <div class="workshop-banner">
