--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,8 @@
         </nav>
     </header>
 <main>
-        <section class="section contact-section">
+
+ <section class="section contact-section">
             <h2>Contact Us</h2>
             <div class="contact-container">
                 <p class="contact-info">
@@ -47,6 +48,29 @@
             </div>
         </section>
     </main>
+
+   <!-- ✅ FAQ Dropdown -->
+    <section id="faqs" class="section">
+      <h2>Frequently Asked Questions</h2>
+      <div class="faq-item">
+        <h3>Who can join?</h3>
+        <div class="faq-answer">
+          <p>All students from grades K–12 are welcome, regardless of experience level!</p>
+        </div>
+      </div>
+      <div class="faq-item">
+        <h3>Do I need my own laptop?</h3>
+        <div class="faq-answer">
+          <p>If you can bring your own laptop it is appreciated. But if not, we have a limited number of desktops.</p>
+        </div>
+      </div>
+      <div class="faq-item">
+        <h3>How much does it cost?</h3>
+        <div class="faq-answer">
+          <p>It’s completely free — thanks to library grants and community support.</p>
+        </div>
+      </div>
+    </section>
 
   <footer>
     <div class="footer-content">
