--- a/gallery.html
+++ b/gallery.html
@@ -25,7 +25,7 @@
         </nav>
     </header>
     <section id="gallery" class="section">
-      <h2>Gallery</h2>
+      <h2>Our First Photos</h2>
       <div class="gallery-grid">
         <img src="Hot Potato Project.jpeg" alt="Code Club Activity" class="gallery-image">
         <img src="Makerspace.jpeg" alt="Code Club Workshop" class="gallery-image">
